$Id: History,v 1.47 2001-11-20 23:29:14 asaim Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

Nov 20, 2001 M.Asai (run-V03-02-09)
- Add GetVersionString() method to G4RunManager.

Oct 24, 2004 M.Asai (run-V03-02-08)

Oct 20, 2001 H.Kurasige
- Modified Set/GetCuts() related methods in G4VUserPhysicsList
  for "cut-per-materials" implementation.

Oct 24, 2001 G.Cosmo (run-V03-02-07)
- Removed references to G4GeomTestMessenger now moved to geometry/volumes
  module. Files G4RunManager[.hh.cc], GNUmakefile.

Oct 23, 2001 G.Cosmo (run-V03-02-06)
- Merged changes in "run-V03-02-04a" and "run-V03-02-05" for removal of
  STLinterface module.
 
Oct 11, 2001 G.Cosmo (run-V03-02-05)
- Replaced inclusion of ctoken.h with G4Tokenizer.hh in
  G4UserPhysicsListMessenger.cc.
- Co-works with tag "globals-V03-02-03" where the STLInterface
  module has been removed.

Oct 11, 2001 G.Cosmo (run-V03-02-04a)
- Modified G4RunManager:
  o added pointer to G4GeomTestMessenger for including new default
    set of commands /geomtest/* in kernel, providing ability to check
    for volumes overlaps in the user's detector geometry.
  o modified call to G4GeometryManager::CloseGeometry() by adding
    argument to verbose-mode.